--- a/hamilton.html
+++ b/hamilton.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body class="bg-dark text-light">
+    <nav class="navbar navbar-expand-md" style="background-color: #ffffff;">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="./assets/images/F1.svg.png" width="200" height="50" alt="Your Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link text-dark" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-danger link-underline" href="hamilton.html"><u><strong>THE GOAT?</strong></u></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav><br>
     <div class="container">
           <h1 class="text-primary">Lewis Hamilton</h1>
           <img src="./assets/images/Lewis.jpg" class="img-fluid rounded-3 mb-3" alt="Lewis Hamilton" style="max-width: 100%;">
