--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,26 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body class="bg-dark">
+        <nav class="navbar navbar-expand-md" style="background-color: #ffffff;">
+            <div class="container">
+              <a class="navbar-brand" href="index.html">
+                <img src="./assets/images/F1.svg.png" width="200" height="50" alt="Your Logo">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link text-danger" href="contact.html"><u><strong>Contact</strong></u></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-dark link-underline" href="hamilton.html">THE GOAT?</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav><br>
         <div class="container my-5">
             <div class="row">
                 <div class="col-md-6 mx-auto">
