--- a/contact.html
+++ b/contact.html
@@ -10,26 +10,31 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body class="bg-dark">
-        <nav class="navbar navbar-expand-md" style="background-color: #ffffff;">
-            <div class="container">
-              <a class="navbar-brand" href="index.html">
-                <img src="./assets/images/F1.svg.png" width="200" height="50" alt="Your Logo">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                  <li class="nav-item">
-                    <a class="nav-link text-danger" href="contact.html"><u><strong>Contact</strong></u></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-dark link-underline" href="hamilton.html">THE GOAT?</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav><br>
+      <nav class="navbar navbar-expand-md" style="background-color: #000000;">
+        <div class="container">
+          <a class="navbar-brand" href="index.html">
+            <img src="./assets/images/F1.svg.png" width="200" height="50" alt="F1 logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="color: red;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30a" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16">
+              <path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/>
+            </svg>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link text-light" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-danger" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="hamilton.html">THE GOAT?</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav><br>
         <div class="container my-5">
             <div class="row">
                 <div class="col-md-6 mx-auto">
